# fx201p-ram-replacement

./: README.md
firmware/hd36106_replacement/: CMakeLists.txt  CMakeLists.txt~  fx201p.h  fx201p_execution.c  fx201p_execution.cpp  fx201p_execution.h  fx201p_execution.h~  fx201p_execution_pc.cpp  hd36106_replacement.c  hd36106_replacement.cpp  hd36106_replacement.c~  mpc  pc
firmware/hd36106_replacement/bf/libbf-2020-01-19/: bfbench  bfbench-avx2  bfbench.avx2.d  bfbench.d  cutils.avx2.d  libbf.avx2.d  tinypi  tinypi-avx2  tinypi.avx2.d  tinypi.d
firmware/hd36106_replacement/bid/: bid128_pow.c  num.h
firmware/hd36106_replacement/icd/: Icd.cpp  Icd.h
firmware/hd36106_replacement/ob2/: CMakeCache.txt  hd36106_replacement.dis  hd36106_replacement.elf.map  hd36106_replacement.hex  hd36106_replacement.uf2
firmware/hd36106_replacement/ob2/pico_extras/: Makefile
firmware/hd36106_replacement/ob2/pico_extras/src/: cmake_install.cmake
firmware/hd36106_replacement/ob2/pico_extras/src/rp2_common/: cmake_install.cmake
firmware/hd36106_replacement/ob2/pioasm/: CMakeCache.txt  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  hd36106_replacement.dis  hd36106_replacement.elf  hd36106_replacement.elf.map  hd36106_replacement.hex  hd36106_replacement.uf2
firmware/hd36106_replacement/oldbuild/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/elf2uf2/boot_uf2_headers/: Makefile
firmware/hd36106_replacement/oldbuild/pico-sdk/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pico-sdk/docs/: Makefile
firmware/hd36106_replacement/oldbuild/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pico-sdk/src/common/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pico-sdk/tools/: Makefile
firmware/hd36106_replacement/oldbuild/pico_extras/: Makefile
firmware/hd36106_replacement/oldbuild/pico_extras/src/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pico_extras/src/common/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pico_extras/src/rp2_common/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild2/: CMakeCache.txt  Makefile  cmake_install.cmake  hd36106_replacement.dis  hd36106_replacement.elf  hd36106_replacement.elf.map  hd36106_replacement.hex  hd36106_replacement.uf2
firmware/hd36106_replacement/oldbuild2/elf2uf2/: Makefile
firmware/hd36106_replacement/oldbuild2/elf2uf2/boot_uf2_headers/: Makefile
firmware/hd36106_replacement/oldbuild2/pico-sdk/src/common/: Makefile  cmake_install.cmake
firmware/hd36106_replacement/oldbuild2/pico-sdk/tools/: Makefile
firmware/hd36106_replacement/oldbuild3/pico-sdk/src/rp2_common/: cmake_install.cmake
firmware/hd36106_replacement/oldbuild3/pico_extras/src/: Makefile
firmware/hd36106_replacement/oldbuild3/pico_extras/src/rp2_common/: Makefile
firmware/hd36106_replacement/wp34s/wp34s_V3/wp34s/: README.TXT  copy_manual.cmd  revision.txt
firmware/hd36106_replacement/wp34s/wp34s_V3/wp34s/emulator/: wp34s.ini
firmware/hd36106_replacement/wp34s/wp34s_V3/wp34s/tools/: wp34s_asm.pl  (+1 more)
(+163 files in other folders)
